Añadido federaciones, clases y relación clientes-clases

--- a/club/templates/base_generic.html
+++ b/club/templates/base_generic.html
@@ -32,7 +32,7 @@
               <a class="nav-link" href="{% url 'cliente' %}">Clients</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Entrenadors</a>
+              <a class="nav-link" href="{% url 'entrenador' %}">Entrenadors</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Personal</a>
