--- a/club/templates/clients/cliente_delete.html
+++ b/club/templates/clients/cliente_delete.html
@@ -1,10 +1,10 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-<h2>Eliminación de cliente</h2>
+<h2>Eliminació de client</h2>
 <p>{{ status }} </p>
-<p>Para volver a la página principal, click al botón de abajo</p> 
-<button type="button" class="btn btn-primary" onclick="location.href='{% url 'cliente' %}';">Inicio</button>
+<p>Per tornar a la página principal, cliqui en el botó</p> 
+<button type="button" class="btn btn-primary" onclick="location.href='{% url 'cliente' %}';">Inici</button>
 
 
 {% endblock %}
