--- a/club/templates/entrenador/entrenador_info.html
+++ b/club/templates/entrenador/entrenador_info.html
@@ -1,7 +1,7 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-<h2>Informació del client {{ cliente_info.DNI }}</h2>
+<h2>Informació del entrenador {{ entrenador_info.DNI }}</h2>
 
     <table class="table table-hover">
         <thead>
@@ -13,36 +13,39 @@
         <tbody>
             <tr class="table-info">
             <th scope="row">DNI</th>
-            <td>{{ cliente_info.DNI }}</td>
+            <td>{{ entrenador_info.DNI }}</td>
             </tr>
             <tr class="table-info">
             <th scope="row">NOM</th>
-            <td>{{ cliente_info.nom }}</td>
+            <td>{{ entrenador_info.nom }}</td>
             </tr>
             <tr class="table-info">
             <th scope="row">COGNOM</th>
-            <td>{{ cliente_info.cognom }}</td>
+            <td>{{ entrenador_info.cognom }}</td>
             </tr>
             <tr class="table-info">
             <th scope="row">DATA NAIXEMENT</th>
-            <td>{{ cliente_info.DataNaix }}</td>
+            <td>{{ entrenador_info.DataNaix }}</td>
             </tr>
             </tr>
             <tr class="table-info">
             <th scope="row">TELEFON</th>
-            <td>{{ cliente_info.Telefon }}</td>
+            <td>{{ entrenador_info.Telefon }}</td>
             </tr>
             <tr class="table-info">
             <th scope="row">DIRECCIÓ</th>
-            <td>{{ cliente_info.direccio }}</td>
+            <td>{{ entrenador_info.direccio }}</td>
+            </tr>
+            <tr class="table-info">
+            <th scope="row">Nº Federació</th>
+            <td>{{ entrenador_info.numFederacio}}</td>
             </tr>
             <tr class="table-info">
             <th scope="row">IBAN</th>
-            <td>{{ cliente_info.compteIBAN|default_if_none:'' }}</td>
+            <td>{{ entrenador_info.compteIBAN|default_if_none:'' }}</td>
             </tr>
         </tbody>
     </table>
-    <button type="button" class="btn btn-warning"  onclick="location.href='{% url 'cliente_modificar' cliente_DNI=cliente_info.DNI %}';">Modificar</button>
-    <button type="button" class="btn btn-warning"  onclick="location.href='{% url 'cliente_classes' cliente_DNI=cliente_info.DNI %}';">Classes que ha participat</button>
-   
+
+       
 {% endblock %}
