--- a/club/templates/base_generic.html
+++ b/club/templates/base_generic.html
@@ -35,7 +35,7 @@
               <a class="nav-link" href="{% url 'entrenador' %}">Entrenadors</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Personal</a>
+              <a class="nav-link" href="{% url 'personal' %}">Personal</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'classes' %}">Classes</a>
